add module config
