# public/openapi.yml
@@ -14,6 +14,19 @@ tags:
     description: "Management user account"
 
 paths:
+  /config:
+    get:
+      tags:
+        - "Misc"
+      parameters:
+        - in: query
+          name: key
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: "Ok"
   /file/upload:
     post:
       tags:
