# src/apps/config/config.controller.ts
@@ -1,0 +1,21 @@
+import { Controller, Get, Query } from '@nestjs/common';
+import { Response } from 'src/utils';
+import { ConfigService } from './config.service';
+
+@Controller('config')
+export class ConfigController {
+
+
+    constructor(private configService: ConfigService) { }
+
+    @Get()
+    async getConfig(@Query('key') key: string) {
+
+        const response = await this.configService.getConfig(key);
+
+        return Response.success({
+            message: "",
+            data: response,
+        })
+    }
+}
